// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CIExecutionSummary tests Shows Fails to Initialize Step - no commits 1`] = `
<div>
  <div
    class="main pullRequest"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="ci-main"
    >
      <svg
        height="18"
        viewBox="0 0 32 32"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M29 16c0 1.6038-.3111 3.1631-.8544 4.5992-.0998.2637-.4365.3299-.6371.1317l-3.989-3.9409c-.1664-.1644-.1943-.4212-.0858-.6285.4326-.8268.6489-1.7725.6489-2.7615.0565-3.2217-2.6-5.87826-5.8783-5.87826-1.0408 0-1.9947.26076-2.8235.70606-.204.10961-.458.08344-.6229-.07926L11.207 4.64368c-.2503-.24699-.1738-.66779.1545-.79382C12.8053 3.29544 14.3394 3 16 3c7.1783 0 13 5.82174 13 13ZM8.47555 5.42062c.23175-.16331.54614-.12936.74662.07111l4.03533 4.03529c.1783.17831.1939.46028.0539.67008-.6307.9455-.9853 2.0581-.9853 3.2594 0 3.2783 2.6565 5.9348 5.9348 5.9348 1.2013 0 2.3139-.3546 3.2594-.9853.2098-.14.4918-.1244.6701.0539l4.3678 4.3679c.2035.2034.235.5235.0651.7557C24.2247 26.8601 20.3994 29 16 29 8.82174 29 3 23.1783 3 16c0-4.4033 2.14366-8.23149 5.47555-10.57938ZM18.2609 17.1304c2.2043 0 3.9565-1.7521 3.9565-3.9565 0-2.2043-1.7522-3.95651-3.9565-3.95651-2.2044 0-3.9566 1.75221-3.9566 3.95651 0 2.2044 1.7522 3.9565 3.9566 3.9565Z"
          fill="url(#a)"
          fill-rule="evenodd"
        />
        <defs>
          <lineargradient
            gradientUnits="userSpaceOnUse"
            id="a"
            x1="-5.39823"
            x2="11.3982"
            y1="11.3982"
            y2="37.3982"
          >
            <stop
              stop-color="#73DFE7"
            />
            <stop
              offset="1"
              stop-color="#0095F7"
            />
          </lineargradient>
        </defs>
      </svg>
    </span>
    <div
      class="Layout--horizontal StyledProps--main strip"
    >
      <div
        class="label"
      >
        <div
          class="StyledProps--font StyledProps--main separator StyledProps--flex StyledProps--padding-right-small"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
            data-icon="repository"
          >
            <svg
              height="14"
              viewBox="0 0 13 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12.438 2.452-.006-.017a.367.367 0 0 0-.067-.114l-.004-.007L10.409.125a.374.374 0 0 0-.28-.125H2.327a.376.376 0 0 0-.28.125L.095 2.314l-.005.008a.374.374 0 0 0-.066.113l-.006.017a.37.37 0 0 0-.018.11v11.064c0 .206.168.374.374.374h11.707a.375.375 0 0 0 .375-.374V2.563a.369.369 0 0 0-.018-.111zm-7.91 7.86h3.4v.357a.318.318 0 0 1-.318.318H4.846a.318.318 0 0 1-.318-.318v-.357zM.75 9.563V6.625h3.03v.357c0 .588.479 1.066 1.067 1.066H7.61c.588 0 1.066-.478 1.066-1.066v-.357h3.03v2.938H.75zm3.03-6.626v.357c0 .588.479 1.067 1.067 1.067H7.61c.589 0 1.067-.479 1.067-1.067v-.357h3.03v2.939H.75V2.937h3.03zm4.15 0v.357a.318.318 0 0 1-.318.318H4.846a.318.318 0 0 1-.318-.318v-.357h3.4zm-3.4 3.688h3.4v.357a.318.318 0 0 1-.319.317H4.846a.317.317 0 0 1-.318-.317v-.357zM2.493.749h7.468l1.284 1.44H1.21L2.494.748zm9.213 12.502H.75v-2.939h3.03v.357c0 .589.479 1.067 1.067 1.067H7.61c.588 0 1.066-.478 1.066-1.067v-.357h3.03v2.94z"
                fill="currentColor"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main partLabel StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1;"
            title="jhttp"
          >
            jhttp
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-left-small"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
            data-icon="git-new-branch"
          >
            <svg
              height="12"
              viewBox="0 0 13 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.406.003a2.399 2.399 0 0 0-.8 4.658v.94a.8.8 0 0 1-.8.8H4.001a2.413 2.413 0 0 0-.8.14V4.66A2.399 2.399 0 0 0 2.402 0a2.399 2.399 0 0 0-.8 4.661v6.678a2.399 2.399 0 0 0 .8 4.661 2.399 2.399 0 0 0 .8-4.661v-2.54a.8.8 0 0 1 .8-.799h4.803a2.4 2.4 0 0 0 2.402-2.4v-.939a2.399 2.399 0 0 0-.8-4.658z"
                fill="currentColor"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main partLabel StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1;"
            title="aman/fix-sanity"
          >
            aman/fix-sanity
          </p>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <span
          class="bp3-icon bp3-icon-arrow-right StyledProps--main StyledProps--padding-left-small StyledProps--padding-right-small"
          icon="arrow-right"
        >
          <svg
            data-icon="arrow-right"
            height="14"
            viewBox="0 0 16 16"
            width="14"
          >
            <desc>
              arrow-right
            </desc>
            <path
              d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main label StyledProps--flex StyledProps--padding-left-medium StyledProps--padding-right-small"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
            data-icon="git-new-branch"
          >
            <svg
              height="12"
              viewBox="0 0 13 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.406.003a2.399 2.399 0 0 0-.8 4.658v.94a.8.8 0 0 1-.8.8H4.001a2.413 2.413 0 0 0-.8.14V4.66A2.399 2.399 0 0 0 2.402 0a2.399 2.399 0 0 0-.8 4.661v6.678a2.399 2.399 0 0 0 .8 4.661 2.399 2.399 0 0 0 .8-4.661v-2.54a.8.8 0 0 1 .8-.799h4.803a2.4 2.4 0 0 0 2.402-2.4v-.939a2.399 2.399 0 0 0-.8-4.658z"
                fill="currentColor"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1;"
            title="master"
          >
            master
          </p>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--margin-left-small"
    >
      <span
        class="bp3-icon bp3-icon-git-pull StyledProps--main"
        icon="git-pull"
      >
        <svg
          data-icon="git-pull"
          height="14"
          viewBox="0 0 16 16"
          width="14"
        >
          <desc>
            git-pull
          </desc>
          <path
            d="M3 1C1.34 1 0 2.34 0 4c0 1.3.84 2.4 2 2.82v3.37C.84 10.6 0 11.7 0 13c0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.3-.84-2.4-2-2.82V6.82C5.16 6.4 6 5.3 6 4c0-1.66-1.34-3-3-3zm0 13c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm0-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm11 5.18V6c0-1.66-1.34-3-3-3H9.41l1.29-1.29c.19-.18.3-.43.3-.71A1.003 1.003 0 009.29.29l-3 3C6.11 3.47 6 3.72 6 4c0 .28.11.53.29.71l3 3a1.003 1.003 0 001.42-1.42L9.41 5H11c.55 0 1 .45 1 1v4.18A2.996 2.996 0 0013 16c1.66 0 3-1.34 3-3 0-1.3-.84-2.4-2-2.82zM13 14c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        style="font-size: 0px;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
          style="max-width: 150px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;"
          title="[CI-0]: Create tests cases for running in Bazel / maven"
        >
          [CI-0]: Create tests cases for running in Bazel / maven
        </p>
      </div>
      <a
        class="label"
        href="https://github.com/wings-software/jhttp/pull/164"
        rel="noopener noreferrer"
        target="_blank"
      >
        ci.prSymbol
        164
      </a>
      <div
        class="state"
      >
        open
      </div>
    </div>
  </div>
</div>
`;

exports[`CIExecutionSummary tests Shows Successful summary 1`] = `
<div>
  <div
    class="main pullRequest"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="ci-main"
    >
      <svg
        height="18"
        viewBox="0 0 32 32"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M29 16c0 1.6038-.3111 3.1631-.8544 4.5992-.0998.2637-.4365.3299-.6371.1317l-3.989-3.9409c-.1664-.1644-.1943-.4212-.0858-.6285.4326-.8268.6489-1.7725.6489-2.7615.0565-3.2217-2.6-5.87826-5.8783-5.87826-1.0408 0-1.9947.26076-2.8235.70606-.204.10961-.458.08344-.6229-.07926L11.207 4.64368c-.2503-.24699-.1738-.66779.1545-.79382C12.8053 3.29544 14.3394 3 16 3c7.1783 0 13 5.82174 13 13ZM8.47555 5.42062c.23175-.16331.54614-.12936.74662.07111l4.03533 4.03529c.1783.17831.1939.46028.0539.67008-.6307.9455-.9853 2.0581-.9853 3.2594 0 3.2783 2.6565 5.9348 5.9348 5.9348 1.2013 0 2.3139-.3546 3.2594-.9853.2098-.14.4918-.1244.6701.0539l4.3678 4.3679c.2035.2034.235.5235.0651.7557C24.2247 26.8601 20.3994 29 16 29 8.82174 29 3 23.1783 3 16c0-4.4033 2.14366-8.23149 5.47555-10.57938ZM18.2609 17.1304c2.2043 0 3.9565-1.7521 3.9565-3.9565 0-2.2043-1.7522-3.95651-3.9565-3.95651-2.2044 0-3.9566 1.75221-3.9566 3.95651 0 2.2044 1.7522 3.9565 3.9566 3.9565Z"
          fill="url(#a)"
          fill-rule="evenodd"
        />
        <defs>
          <lineargradient
            gradientUnits="userSpaceOnUse"
            id="a"
            x1="-5.39823"
            x2="11.3982"
            y1="11.3982"
            y2="37.3982"
          >
            <stop
              stop-color="#73DFE7"
            />
            <stop
              offset="1"
              stop-color="#0095F7"
            />
          </lineargradient>
        </defs>
      </svg>
    </span>
    <div
      class="Layout--horizontal StyledProps--main strip"
    >
      <div
        class="label"
      >
        <div
          class="StyledProps--font StyledProps--main separator StyledProps--flex StyledProps--padding-right-small"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
            data-icon="repository"
          >
            <svg
              height="14"
              viewBox="0 0 13 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12.438 2.452-.006-.017a.367.367 0 0 0-.067-.114l-.004-.007L10.409.125a.374.374 0 0 0-.28-.125H2.327a.376.376 0 0 0-.28.125L.095 2.314l-.005.008a.374.374 0 0 0-.066.113l-.006.017a.37.37 0 0 0-.018.11v11.064c0 .206.168.374.374.374h11.707a.375.375 0 0 0 .375-.374V2.563a.369.369 0 0 0-.018-.111zm-7.91 7.86h3.4v.357a.318.318 0 0 1-.318.318H4.846a.318.318 0 0 1-.318-.318v-.357zM.75 9.563V6.625h3.03v.357c0 .588.479 1.066 1.067 1.066H7.61c.588 0 1.066-.478 1.066-1.066v-.357h3.03v2.938H.75zm3.03-6.626v.357c0 .588.479 1.067 1.067 1.067H7.61c.589 0 1.067-.479 1.067-1.067v-.357h3.03v2.939H.75V2.937h3.03zm4.15 0v.357a.318.318 0 0 1-.318.318H4.846a.318.318 0 0 1-.318-.318v-.357h3.4zm-3.4 3.688h3.4v.357a.318.318 0 0 1-.319.317H4.846a.317.317 0 0 1-.318-.317v-.357zM2.493.749h7.468l1.284 1.44H1.21L2.494.748zm9.213 12.502H.75v-2.939h3.03v.357c0 .589.479 1.067 1.067 1.067H7.61c.588 0 1.066-.478 1.066-1.067v-.357h3.03v2.94z"
                fill="currentColor"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main partLabel StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1;"
            title="portal"
          >
            portal
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-left-small"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
            data-icon="git-new-branch"
          >
            <svg
              height="12"
              viewBox="0 0 13 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.406.003a2.399 2.399 0 0 0-.8 4.658v.94a.8.8 0 0 1-.8.8H4.001a2.413 2.413 0 0 0-.8.14V4.66A2.399 2.399 0 0 0 2.402 0a2.399 2.399 0 0 0-.8 4.661v6.678a2.399 2.399 0 0 0 .8 4.661 2.399 2.399 0 0 0 .8-4.661v-2.54a.8.8 0 0 1 .8-.799h4.803a2.4 2.4 0 0 0 2.402-2.4v-.939a2.399 2.399 0 0 0-.8-4.658z"
                fill="currentColor"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main partLabel StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1;"
            title="ownerId-patch-8"
          >
            ownerId-patch-8
          </p>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <span
          class="bp3-icon bp3-icon-arrow-right StyledProps--main StyledProps--padding-left-small StyledProps--padding-right-small"
          icon="arrow-right"
        >
          <svg
            data-icon="arrow-right"
            height="14"
            viewBox="0 0 16 16"
            width="14"
          >
            <desc>
              arrow-right
            </desc>
            <path
              d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main label StyledProps--flex StyledProps--padding-left-medium StyledProps--padding-right-small"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
            data-icon="git-new-branch"
          >
            <svg
              height="12"
              viewBox="0 0 13 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.406.003a2.399 2.399 0 0 0-.8 4.658v.94a.8.8 0 0 1-.8.8H4.001a2.413 2.413 0 0 0-.8.14V4.66A2.399 2.399 0 0 0 2.402 0a2.399 2.399 0 0 0-.8 4.661v6.678a2.399 2.399 0 0 0 .8 4.661 2.399 2.399 0 0 0 .8-4.661v-2.54a.8.8 0 0 1 .8-.799h4.803a2.4 2.4 0 0 0 2.402-2.4v-.939a2.399 2.399 0 0 0-.8-4.658z"
                fill="currentColor"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1;"
            title="master"
          >
            master
          </p>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--margin-left-small"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="git-branch-existing"
      >
        <svg
          fill="none"
          height="14"
          viewBox="0 0 16 9"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.403 3.67H16v1.626h-3.597a4.477 4.477 0 01-8.807 0H0V3.67h3.596a4.477 4.477 0 018.807 0zm-7.26.813a2.857 2.857 0 105.714 0 2.857 2.857 0 00-5.714 0z"
            fill="#383946"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        style="font-size: 0px;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
          style="max-width: 150px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;"
          title="Update ConnectorUtils.java"
        >
          Update ConnectorUtils.java
        </p>
      </div>
      <p
        class="StyledProps--font StyledProps--main commitId StyledProps--font-variation-small"
        data-name="commitId"
      >
        <a
          class="label"
          href="https://github.com/wings-software/portal/commit/e3b377ac1bfdb432d5a6a496c53716e855f818d3"
          rel="noreferrer"
          target="_blank"
        >
          e3b377a
        </a>
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target Text--targetClass"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-small"
              style="cursor: pointer;"
              tabindex="0"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy"
              >
                <svg
                  height="14"
                  viewBox="0 0 14 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#22272D"
                    fill-rule="nonzero"
                    stroke="#22272D"
                    stroke-width="0.25"
                  >
                    <path
                      d="M12.89.55H6.388a3.28 3.28 0 00-3.043 2.067C1.672 2.76.34 4.17.34 5.87v9.271c0 .17.138.308.307.308H7.15c1.35 0 2.543-.825 3.042-2.066 1.673-.144 3.006-1.554 3.006-3.255V.86A.307.307 0 0012.89.55zM7.15 14.835H.955V5.87c0-1.299.955-2.4 2.199-2.624-.002.01-.001.021-.003.032-.031.182-.05.367-.05.552v9.27c0 .17.138.308.308.308h6.105a2.67 2.67 0 01-2.364 1.425zm5.432-4.705a2.68 2.68 0 01-2.607 2.664H3.716V3.831a2.672 2.672 0 012.671-2.665h6.195v8.963z"
                    />
                    <path
                      d="M6.11 6.672a.308.308 0 000 .615h1.732V9.02a.308.308 0 00.616 0V7.287h1.733a.308.308 0 000-.615H8.458V4.939a.308.308 0 00-.616 0v1.733H6.11z"
                    />
                  </g>
                </svg>
              </span>
            </p>
          </span>
        </span>
      </p>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--margin-left-small"
    >
      <span
        class="bp3-icon bp3-icon-git-pull StyledProps--main"
        icon="git-pull"
      >
        <svg
          data-icon="git-pull"
          height="14"
          viewBox="0 0 16 16"
          width="14"
        >
          <desc>
            git-pull
          </desc>
          <path
            d="M3 1C1.34 1 0 2.34 0 4c0 1.3.84 2.4 2 2.82v3.37C.84 10.6 0 11.7 0 13c0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.3-.84-2.4-2-2.82V6.82C5.16 6.4 6 5.3 6 4c0-1.66-1.34-3-3-3zm0 13c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm0-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm11 5.18V6c0-1.66-1.34-3-3-3H9.41l1.29-1.29c.19-.18.3-.43.3-.71A1.003 1.003 0 009.29.29l-3 3C6.11 3.47 6 3.72 6 4c0 .28.11.53.29.71l3 3a1.003 1.003 0 001.42-1.42L9.41 5H11c.55 0 1 .45 1 1v4.18A2.996 2.996 0 0013 16c1.66 0 3-1.34 3-3 0-1.3-.84-2.4-2-2.82zM13 14c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        style="font-size: 0px;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
          style="max-width: 150px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;"
          title="[CI-0]: Example changes for TI demo"
        >
          [CI-0]: Example changes for TI demo
        </p>
      </div>
      <a
        class="label"
        href="https://github.com/wings-software/portal/pull/26625"
        rel="noopener noreferrer"
        target="_blank"
      >
        ci.prSymbol
        26625
      </a>
      <div
        class="state"
      >
        open
      </div>
    </div>
  </div>
</div>
`;
